Camera does not rotate in walk mode (Shift - F) #45361

Closed
opened 2015-07-07 12:26:27 +02:00 by Marek Moravec · 20 comments

System Information
Win7 64bit, GTX 560

Blender Version
Broken: 2.75 c6b042b
Worked: 2.74

Short description of error
Sometimes when switching into the walk mode (Shift + F) in camera view the camera doesnot react to mouse movement. I found out that it is caused by fast mouse movement while pressing the Shift F combination.

Exact steps for others to reproduce the error
Open a new file, add a camera, switch to camera view.
Move your mouse quickly from left to right (or make quick circles with the cursor). Press the Shift F combo while moving your mouse. If you do it right the camera switches to the walk mode but does not rotate. The WSAD keys work as they should.
If the cursor is still during the shortcut everything works as expected.

**System Information** Win7 64bit, GTX 560 **Blender Version** Broken: 2.75 c6b042b Worked: 2.74 **Short description of error** Sometimes when switching into the walk mode (Shift + F) in camera view the camera doesnot react to mouse movement. I found out that it is caused by fast mouse movement while pressing the Shift F combination. **Exact steps for others to reproduce the error** Open a new file, add a camera, switch to camera view. Move your mouse quickly from left to right (or make quick circles with the cursor). Press the Shift F combo while moving your mouse. If you do it right the camera switches to the walk mode but does not rotate. The WSAD keys work as they should. If the cursor is still during the shortcut everything works as expected.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Traverso

Added subscriber: @Traverso

#45556 was marked as duplicate of this issue

#45556 was marked as duplicate of this issue

Added subscribers: @JulianEisel, @dfelinto, @Sergey

Added subscribers: @JulianEisel, @dfelinto, @Sergey

Can confirm the issue.

@JulianEisel, @dfelinto, do you guys mind looking into the issue? :)

Can confirm the issue. @JulianEisel, @dfelinto, do you guys mind looking into the issue? :)

I can't reproduce this on OSX :/

I can't reproduce this on OSX :/

Can you check if you can reproduce this for the Fly View Navigation as well? (change the default View Navigation mode in User Preferences > Input)

Can you check if you can reproduce this for the Fly View Navigation as well? (change the default View Navigation mode in User Preferences > Input)
Member

Can't reproduce on Linux either. @Sergey on which system did you check?

Can't reproduce on Linux either. @Sergey on which system did you check?

Same as mentioned in the report -- Windows 7 64bit.

Same as mentioned in the report -- Windows 7 64bit.
Author

Added subscriber: @dalai-1

Added subscriber: @dalai-1
Author

@dfelinto: I can't reproduce this in the Fly View - problem only in the Walk mode.

@dfelinto: I can't reproduce this in the Fly View - problem only in the Walk mode.

Added subscriber: @kphipps

Added subscriber: @kphipps

I have the same issue. Windows 7 64-bit.

I have the same issue. Windows 7 64-bit.

Added subscriber: @sindra1961

Added subscriber: @sindra1961

I can. win32.
It does not reappear at all if I do not change it while moving a mouse.
However, it does not reappear surely.

I can. win32. It does not reappear at all if I do not change it while moving a mouse. However, it does not reappear surely.

Added subscriber: @pixelbuffer

Added subscriber: @pixelbuffer

Can confirm this bug (with and without mouse movement) in 2.75 and 2.75a.
WASD works fine.

Mac OS X 10.9.5 (Mavericks)

Can confirm this bug (with and without mouse movement) in 2.75 and 2.75a. WASD works fine. Mac OS X 10.9.5 (Mavericks)

This issue was referenced by 5e1a8055f4

This issue was referenced by 5e1a8055f4504c9207f12279f44acaf90fc7a7ed

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Added subscriber: @edgar.ishankulov

Added subscriber: @edgar.ishankulov
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45361
No description provided.