Fix T45361: Camera does not rotate in walk mode